fix plan description

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "### Visualization and Interactivity\n",
     "- Decision boundary visualization during training    (2)\n",
-    "- (DONE) Loss and accuracy plots updated in real-time       (1)\n",
+    "- (DONE) Loss and accuracy plots after training  (1)\n",
     "- Visual explanation of gradients and weight updates (3)\n",
     "- Interactive sliders for hyperparameters (learning rate, network architecture)                                        (12)\n",
     "\n",
