--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "### Visualization and Interactivity\n",
     "- Decision boundary visualization during training    (2)\n",
-    "- (DONE) Loss and accuracy plots after training  (1)\n",
+    "- (DONE) ~~Loss and accuracy plots after training~~  (1)\n",
     "- Visual explanation of gradients and weight updates (3)\n",
     "- Interactive sliders for hyperparameters (learning rate, network architecture)                                        (12)\n",
     "\n",
@@ -611,6 +611,8 @@
     "            'train_acc': [],\n",
     "            'val_acc': []\n",
     "        }\n",
+    "        self.grid = None\n",
+    "        self.grid_coords = None\n",
     "        \n",
     "    def update(self, loss: float, val_loss: float, train_acc: float, val_acc: float):\n",
     "        '''\n",
@@ -628,7 +630,7 @@
     "        self.history['train_acc'].append(train_acc)\n",
     "        self.history['val_acc'].append(val_acc)\n",
     "\n",
-    "    def plot(self):\n",
+    "    def plot_metrics_history(self):\n",
     "        '''\n",
     "        Plot the training history.\n",
     "        It plots the loss and accuracy for both training and validation sets.\n",
@@ -657,7 +659,55 @@
     "        \n",
     "        plt.tight_layout()\n",
     "        plt.show()     \n",
-    "    \n"
+    "    \n",
+    "    def plot_decision_boundary(self, model, x_train, y_train):\n",
+    "        # Create grid first time only\n",
+    "        if self.grid is None:\n",
+    "            # Extend bounds a bit further for better visualization\n",
+    "            x_min, x_max = x_train[:, 0].min() - 1.0, x_train[:, 0].max() + 1.0\n",
+    "            y_min, y_max = x_train[:, 1].min() - 1.0, x_train[:, 1].max() + 1.0\n",
+    "        \n",
+    "            # Increase grid resolution for smoother boundaries\n",
+    "            xx, yy = np.meshgrid(np.linspace(x_min, x_max, 200),\n",
+    "                            np.linspace(y_min, y_max, 200))\n",
+    "            self.grid = np.c_[xx.ravel(), yy.ravel()]\n",
+    "            self.grid_coords = (xx, yy)\n",
+    "    \n",
+    "        # Get predictions for grid points\n",
+    "        grid_predictions = model.forward(self.grid)\n",
+    "        grid_predictions = np.argmax(grid_predictions, axis=1)\n",
+    "    \n",
+    "        # Create new figure with white background\n",
+    "        plt.figure(figsize=(10, 8), facecolor='white')\n",
+    "    \n",
+    "        # Plot decision boundary with better aesthetics\n",
+    "        plt.contourf(self.grid_coords[0], self.grid_coords[1], \n",
+    "                 grid_predictions.reshape(self.grid_coords[0].shape),\n",
+    "                 alpha=0.15, cmap='viridis', levels=np.arange(4)-0.5)\n",
+    "    \n",
+    "        # Add contour lines to highlight boundaries\n",
+    "        plt.contour(self.grid_coords[0], self.grid_coords[1],\n",
+    "                grid_predictions.reshape(self.grid_coords[0].shape),\n",
+    "                colors='black', alpha=0.3, linewidths=0.5)\n",
+    "    \n",
+    "        # Plot training points with better visibility\n",
+    "        scatter = plt.scatter(x_train[:, 0], x_train[:, 1], \n",
+    "                         c=np.argmax(y_train, axis=1), \n",
+    "                         cmap='viridis',\n",
+    "                         edgecolors='white',\n",
+    "                         s=20,\n",
+    "                         alpha=0.6,  # Some transparency\n",
+    "                         linewidth=0.5)\n",
+    "    \n",
+    "        plt.colorbar(scatter, label='Class')\n",
+    "        plt.xlabel('X', fontsize=12)\n",
+    "        plt.ylabel('Y', fontsize=12)\n",
+    "        plt.title('Decision Boundary', fontsize=14, pad=10)\n",
+    "    \n",
+    "        # Make plot more aesthetic\n",
+    "        plt.grid(True, alpha=0.2)\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n"
    ]
   },
   {
@@ -730,9 +780,10 @@
     "                val_acc = self.compute_accuracy(val_loader)\n",
     "                print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Val Loss: {val_loss:.4f}, \"\n",
     "                f\"Train Acc: {train_acc:.2f}%, Val Acc: {val_acc:.2f}%\")\n",
+    "                self.visualizer.plot_decision_boundary(self.model, train_loader.dataset.x, train_loader.dataset.y)\n",
     "        \n",
-    "        # Plot the training history\n",
-    "        self.visualizer.plot()\n",
+    "        # Plot the metrics history during training\n",
+    "        self.visualizer.plot_metrics_history()\n",
     "                \n",
     "    def validate(self, val_loader: DataLoader) -> float:\n",
     "        '''\n",
