--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -31,7 +31,7 @@
     "- Training on other toy datasets (e.g., digit recognition or synthetic classification)                                      (11)\n",
     "\n",
     "### Visualization and Interactivity\n",
-    "- Decision boundary visualization during training    (2)\n",
+    "- (DONE) ~~Decision boundary visualization during training~~    (2)\n",
     "- (DONE) ~~Loss and accuracy plots after training~~  (1)\n",
     "- Visual explanation of gradients and weight updates (3)\n",
     "- Interactive sliders for hyperparameters (learning rate, network architecture)                                        (12)\n",
@@ -726,7 +726,7 @@
     "        self.optimizer = optimizer\n",
     "        self.visualizer = TrainingVisualizer()\n",
     "\n",
-    "    def train(self, dataset: Dataset, epochs: int = 1000):\n",
+    "    def train(self, dataset: Dataset, epochs: int = 1000, log_interval:int = 200, show_plots:bool = True):\n",
     "        '''\n",
     "        Train the model using the specified loss function and optimizer.\n",
     "        The training loop consists of the following steps:\n",
@@ -774,13 +774,13 @@
     "            val_loss = self.validate(val_loader)\n",
     "            self.visualizer.update(epoch_loss, val_loss, self.compute_accuracy(train_loader), self.compute_accuracy(val_loader))\n",
     "            # Print loss every 100 epochs\n",
-    "            if epoch % 100 == 0:\n",
-    "                #print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Validation Loss: {val_loss:.4f}\")\n",
+    "            if epoch % log_interval == 0:\n",
     "                train_acc = self.compute_accuracy(train_loader)\n",
     "                val_acc = self.compute_accuracy(val_loader)\n",
     "                print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Val Loss: {val_loss:.4f}, \"\n",
     "                f\"Train Acc: {train_acc:.2f}%, Val Acc: {val_acc:.2f}%\")\n",
-    "                self.visualizer.plot_decision_boundary(self.model, train_loader.dataset.x, train_loader.dataset.y)\n",
+    "                if show_plots:\n",
+    "                    self.visualizer.plot_decision_boundary(self.model, train_loader.dataset.x, train_loader.dataset.y)\n",
     "        \n",
     "        # Plot the metrics history during training\n",
     "        self.visualizer.plot_metrics_history()\n",
