add heatmap of weights and updates on hidden layers

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -707,6 +707,52 @@
     "        # Make plot more aesthetic\n",
     "        plt.grid(True, alpha=0.2)\n",
     "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "        \n",
+    "    def weights_gradients_heatmap(self, model: Sequential, optimizer: Optimizer) -> None:\n",
+    "        '''\n",
+    "        Plot the weights and their updates during training.\n",
+    "        Args:\n",
+    "            model: Sequential model to visualize\n",
+    "            optimizer: Optimizer instance to calculate updates\n",
+    "        Returns:\n",
+    "            None\n",
+    "        '''\n",
+    "        # Get only hidden Linear layers\n",
+    "        hidden_linear_layers = [(i, layer) for i, layer in enumerate(model.layers[1:-1]) \n",
+    "                          if isinstance(layer, Linear)]\n",
+    "    \n",
+    "        if not hidden_linear_layers:\n",
+    "            print(\"No hidden linear layers to visualize.\")\n",
+    "            return\n",
+    "    \n",
+    "        # Create figure with 2 columns instead of 3 (combining gradients and updates)\n",
+    "        fig, axes = plt.subplots(len(hidden_linear_layers), 2, \n",
+    "                            figsize=(12, 4 * len(hidden_linear_layers)))\n",
+    "    \n",
+    "        # Handle single layer case\n",
+    "        if len(hidden_linear_layers) == 1:\n",
+    "            axes = axes.reshape(1, -1)\n",
+    "    \n",
+    "        for i, (layer_num, layer) in enumerate(hidden_linear_layers):\n",
+    "            # 1. Plot normalized weights\n",
+    "            weights_norm = layer.weights / np.abs(layer.weights).max()\n",
+    "            ax_weights = axes[i, 0]\n",
+    "            cax_weights = ax_weights.matshow(weights_norm, cmap='RdBu', vmin=-1, vmax=1)\n",
+    "            ax_weights.set_title(f'Layer {layer_num} Weights\\nMax absolute value: {np.abs(layer.weights).max():.4f}')\n",
+    "            plt.colorbar(cax_weights, ax=ax_weights)\n",
+    "        \n",
+    "            # 2. Plot gradient-based updates\n",
+    "            if layer.grad_weights is not None:\n",
+    "                update = optimizer.learning_rate * layer.grad_weights\n",
+    "                update_norm = update / np.abs(update).max()\n",
+    "                ax_update = axes[i, 1]\n",
+    "                cax_update = ax_update.matshow(update_norm, cmap='RdBu', vmin=-1, vmax=1)\n",
+    "                ax_update.set_title(f'Layer {layer_num} Weight Updates (lr={optimizer.learning_rate})\\nMax absolute value: {np.abs(update).max():.4f}')\n",
+    "                plt.colorbar(cax_update, ax=ax_update)\n",
+    "    \n",
+    "        plt.suptitle('Weight Values and Their Updates', y=1.05, fontsize=14)\n",
+    "        plt.tight_layout()\n",
     "        plt.show()\n"
    ]
   },
@@ -781,6 +827,7 @@
     "                f\"Train Acc: {train_acc:.2f}%, Val Acc: {val_acc:.2f}%\")\n",
     "                if show_plots:\n",
     "                    self.visualizer.plot_decision_boundary(self.model, train_loader.dataset.x, train_loader.dataset.y)\n",
+    "                    self.visualizer.weights_gradients_heatmap(self.model, self.optimizer)\n",
     "        \n",
     "        # Plot the metrics history during training\n",
     "        self.visualizer.plot_metrics_history()\n",
@@ -861,9 +908,9 @@
     "model = Sequential([\n",
     "    Linear(2, 64),\n",
     "    ReLU(),\n",
-    "    Linear(64, 128),\n",
+    "    Linear(64, 100),\n",
     "    ReLU(),\n",
-    "    Linear(128, 3),\n",
+    "    Linear(100, 3),\n",
     "])\n",
     "model.summary()\n",
     "loss_fn = CrossEntropySoftMax()\n",
