--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -59,6 +59,7 @@
     "import numpy as np\n",
     "from abc import ABC, abstractmethod\n",
     "import matplotlib.pyplot as plt\n",
+    "import time \n",
     "\n",
     "# Set random seed for reproducibility\n",
     "np.random.seed(42)"
@@ -792,11 +793,12 @@
     "        Returns:\n",
     "            None\n",
     "        '''\n",
-    "        \n",
     "        # Split the dataset into training and validation sets\n",
     "        train_loader, val_loader = DataLoader.holdout_split(dataset,test_size=0.2)\n",
+    "        epoch_times = []\n",
     "        # Training loop\n",
     "        for epoch in range(epochs):\n",
+    "            start_time = time.time()\n",
     "            epoch_loss = 0\n",
     "            for x_batch, y_batch in train_loader:\n",
     "                # Forward pass\n",
@@ -819,12 +821,14 @@
     "            # Validate the model\n",
     "            val_loss = self.validate(val_loader)\n",
     "            self.visualizer.update(epoch_loss, val_loss, self.compute_accuracy(train_loader), self.compute_accuracy(val_loader))\n",
+    "            epoch_times.append(time.time() - start_time)\n",
     "            # Print loss every 100 epochs\n",
     "            if epoch % log_interval == 0:\n",
+    "                avg_time = sum(epoch_times[-log_interval:]) / min(log_interval, len(epoch_times))\n",
     "                train_acc = self.compute_accuracy(train_loader)\n",
     "                val_acc = self.compute_accuracy(val_loader)\n",
     "                print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Val Loss: {val_loss:.4f}, \"\n",
-    "                f\"Train Acc: {train_acc:.2f}%, Val Acc: {val_acc:.2f}%\")\n",
+    "                f\"Train Acc: {train_acc:.2f}%, Val Acc: {val_acc:.2f}%, Time/epoch: {avg_time:.3f}s\")\n",
     "                if show_plots:\n",
     "                    self.visualizer.plot_decision_boundary(self.model, train_loader.dataset.x, train_loader.dataset.y)\n",
     "                    self.visualizer.weights_gradients_heatmap(self.model, self.optimizer)\n",
