add Xavier initialization for weights, reduce the number of nodes in the showcase example

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -253,7 +253,9 @@
     "        assert input_dim > 0 and output_dim > 0, \"Input and output dimensions of a Linear layer must be positive integers.\"\n",
     "        super().__init__(input_dim, output_dim)\n",
     "        # Initialize weights and bias\n",
-    "        self.weights = np.random.randn(input_dim, output_dim) * 0.01\n",
+    "        #self.weights = np.random.randn(input_dim, output_dim) * 0.01\n",
+    "        # Xavier/Glorot initialization instead of fixed scale\n",
+    "        self.weights = np.random.randn(input_dim, output_dim) * np.sqrt(2.0 / input_dim)\n",
     "        self.bias = np.zeros((1, output_dim))\n",
     "        self.grad_weights = None\n",
     "        self.grad_bias = None   \n",
@@ -910,11 +912,11 @@
     "dataset = Dataset(x_train, y_train)\n",
     "\n",
     "model = Sequential([\n",
-    "    Linear(2, 64),\n",
+    "    Linear(2, 12),\n",
     "    ReLU(),\n",
-    "    Linear(64, 100),\n",
+    "    Linear(12, 50),\n",
     "    ReLU(),\n",
-    "    Linear(100, 3),\n",
+    "    Linear(50, 3),\n",
     "])\n",
     "model.summary()\n",
     "loss_fn = CrossEntropySoftMax()\n",
