add early stopping

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "970a1e45",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,8 @@
     "import numpy as np\n",
     "from abc import ABC, abstractmethod\n",
     "import matplotlib.pyplot as plt\n",
-    "import time \n",
+    "import time\n",
+    "import copy \n",
     "\n",
     "# Set random seed for reproducibility\n",
     "np.random.seed(42)"
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a59c5524",
    "metadata": {},
    "outputs": [],
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e89cde36",
    "metadata": {},
    "outputs": [],
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7162cb0c",
    "metadata": {},
    "outputs": [],
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fb14196b",
    "metadata": {},
    "outputs": [],
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2cca352b",
    "metadata": {},
    "outputs": [],
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ed26f1aa",
    "metadata": {},
    "outputs": [],
@@ -489,10 +490,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ba90a693",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 1.1892453997208776\n",
+      "Epoch 100, Loss: 0.4770388534224088\n",
+      "Epoch 200, Loss: 0.3141166515818018\n",
+      "Epoch 300, Loss: 0.23939992079441755\n",
+      "Epoch 400, Loss: 0.19847230714619582\n",
+      "Epoch 500, Loss: 0.1720705839351788\n",
+      "Epoch 600, Loss: 0.15296851307119266\n",
+      "Epoch 700, Loss: 0.1388165030700762\n",
+      "Epoch 800, Loss: 0.12773083459622903\n",
+      "Epoch 900, Loss: 0.11874282967450256\n",
+      "Test Accuracy: 96.67%\n"
+     ]
+    }
+   ],
    "source": [
     "#Define a simple model and apply it to spiral dataset\n",
     "model = Sequential([\n",
@@ -517,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9758906f",
    "metadata": {},
    "outputs": [],
@@ -594,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ca70c15a",
    "metadata": {},
    "outputs": [],
@@ -775,7 +794,7 @@
     "        self.optimizer = optimizer\n",
     "        self.visualizer = TrainingVisualizer()\n",
     "\n",
-    "    def train(self, dataset: Dataset, epochs: int = 1000, log_interval:int = 200, show_plots:bool = True):\n",
+    "    def train(self, dataset: Dataset, epochs: int = 1000, log_interval:int = 200, show_plots:bool = True, patience: int = 10, min_delta: float = 1e-4):\n",
     "        '''\n",
     "        Train the model using the specified loss function and optimizer.\n",
     "        The training loop consists of the following steps:\n",
@@ -798,6 +817,9 @@
     "        # Split the dataset into training and validation sets\n",
     "        train_loader, val_loader = DataLoader.holdout_split(dataset,test_size=0.2)\n",
     "        epoch_times = []\n",
+    "        best_val_loss = float('inf')\n",
+    "        best_model_state = None\n",
+    "        patience_counter = 0\n",
     "        # Training loop\n",
     "        for epoch in range(epochs):\n",
     "            start_time = time.time()\n",
@@ -824,6 +846,20 @@
     "            val_loss = self.validate(val_loader)\n",
     "            self.visualizer.update(epoch_loss, val_loss, self.compute_accuracy(train_loader), self.compute_accuracy(val_loader))\n",
     "            epoch_times.append(time.time() - start_time)\n",
+    "            # Early stopping check\n",
+    "            if val_loss < best_val_loss - min_delta:\n",
+    "                best_val_loss = val_loss\n",
+    "                best_model_state = copy.deepcopy({layer.weights for layer in self.model.layers if isinstance(layer, Linear)})\n",
+    "                patience_counter = 0\n",
+    "            else:\n",
+    "                patience_counter += 1\n",
+    "\n",
+    "            if patience_counter >= patience:\n",
+    "                print(f\"Early stopping triggered after {epoch} epochs\")\n",
+    "                # Restore best model\n",
+    "                for layer, weights in zip([l for l in self.model.layers if isinstance(l, Linear)], best_model_state):\n",
+    "                    layer.weights = weights\n",
+    "                break\n",
     "            # Print loss every 100 epochs\n",
     "            if epoch % log_interval == 0:\n",
     "                avg_time = sum(epoch_times[-log_interval:]) / min(log_interval, len(epoch_times))\n",
