add early stopping

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "970a1e45",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a59c5524",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e89cde36",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7162cb0c",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fb14196b",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2cca352b",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ed26f1aa",
    "metadata": {},
    "outputs": [],
@@ -490,28 +490,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ba90a693",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, Loss: 1.1892453997208776\n",
-      "Epoch 100, Loss: 0.4770388534224088\n",
-      "Epoch 200, Loss: 0.3141166515818018\n",
-      "Epoch 300, Loss: 0.23939992079441755\n",
-      "Epoch 400, Loss: 0.19847230714619582\n",
-      "Epoch 500, Loss: 0.1720705839351788\n",
-      "Epoch 600, Loss: 0.15296851307119266\n",
-      "Epoch 700, Loss: 0.1388165030700762\n",
-      "Epoch 800, Loss: 0.12773083459622903\n",
-      "Epoch 900, Loss: 0.11874282967450256\n",
-      "Test Accuracy: 96.67%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Define a simple model and apply it to spiral dataset\n",
     "model = Sequential([\n",
@@ -536,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9758906f",
    "metadata": {},
    "outputs": [],
@@ -613,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ca70c15a",
    "metadata": {},
    "outputs": [],
@@ -811,6 +793,10 @@
     "        Args:\n",
     "            dataset (Dataset): The dataset to be used for training.\n",
     "            epochs (int): Number of epochs for training. Default is 1000.\n",
+    "            log_interval (int): Interval for logging the loss. Default is 200.\n",
+    "            show_plots (bool): Whether to show the plots during training. Default is True.\n",
+    "            patience (int): Number of epochs to wait for improvement before early stopping. Default is 10.\n",
+    "            min_delta (float): Minimum change in the validation loss to qualify as an improvement. Default is 1e-4.\n",
     "        Returns:\n",
     "            None\n",
     "        '''\n",
@@ -849,7 +835,7 @@
     "            # Early stopping check\n",
     "            if val_loss < best_val_loss - min_delta:\n",
     "                best_val_loss = val_loss\n",
-    "                best_model_state = copy.deepcopy({layer.weights for layer in self.model.layers if isinstance(layer, Linear)})\n",
+    "                best_model_state = copy.deepcopy([layer.weights for layer in self.model.layers if isinstance(layer, Linear)])\n",
     "                patience_counter = 0\n",
     "            else:\n",
     "                patience_counter += 1\n",
@@ -857,8 +843,9 @@
     "            if patience_counter >= patience:\n",
     "                print(f\"Early stopping triggered after {epoch} epochs\")\n",
     "                # Restore best model\n",
-    "                for layer, weights in zip([l for l in self.model.layers if isinstance(l, Linear)], best_model_state):\n",
-    "                    layer.weights = weights\n",
+    "                linear_layers = [l for l in self.model.layers if isinstance(l, Linear)]\n",
+    "                for layer, weights in zip(linear_layers, best_model_state):\n",
+    "                    layer.weights = copy.deepcopy(weights)\n",
     "                break\n",
     "            # Print loss every 100 epochs\n",
     "            if epoch % log_interval == 0:\n",
