add learning rate scheduler abstract class and few concrete implementations

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -213,6 +213,16 @@
     "            None\n",
     "        \"\"\"\n",
     "        pass\n",
+    "    \n",
+    "    def update_learning_rate(self, new_lr: float) -> None:\n",
+    "        \"\"\"\n",
+    "        Update the learning rate of the optimizer.\n",
+    "        Args:\n",
+    "            new_lr (float): New learning rate.\n",
+    "        Returns:\n",
+    "            None\n",
+    "        \"\"\"\n",
+    "        self.learning_rate = new_lr\n",
     "    "
    ]
   },
@@ -596,6 +606,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "acbc8c65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Learning rate scheduler\n",
+    "\n",
+    "class LRScheduler(ABC):\n",
+    "    '''\n",
+    "    Abstract base class for learning rate schedulers.\n",
+    "    Each scheduler should implement the get_lr method to compute the current learning rate.\n",
+    "    '''\n",
+    "    def __init__(self, initial_lr: float):\n",
+    "        assert initial_lr > 0, \"Initial learning rate must be positive\"\n",
+    "        self.initial_lr = initial_lr\n",
+    "        self.current_step = 0\n",
+    "        \n",
+    "    @abstractmethod\n",
+    "    def get_lr(self) -> float:\n",
+    "        \"\"\"Calculate the learning rate for the current step\"\"\"\n",
+    "        pass\n",
+    "    \n",
+    "    def step(self) -> None:\n",
+    "        \"\"\"Increment the step counter\"\"\"\n",
+    "        self.current_step += 1\n",
+    "\n",
+    "class StepLRScheduler(LRScheduler):\n",
+    "    \"\"\"Decays learning rate by gamma every step_size epochs\"\"\"\n",
+    "    def __init__(self, initial_lr: float, step_size: int, gamma: float = 0.1):\n",
+    "        super().__init__(initial_lr)\n",
+    "        self.step_size = step_size\n",
+    "        self.gamma = gamma\n",
+    "        \n",
+    "    def get_lr(self) -> float:\n",
+    "        return self.initial_lr * (self.gamma ** (self.current_step // self.step_size))\n",
+    "\n",
+    "class ExponentialLRScheduler(LRScheduler):\n",
+    "    \"\"\"Exponentially decays learning rate by gamma every epoch\"\"\"\n",
+    "    def __init__(self, initial_lr: float, gamma: float = 0.95):\n",
+    "        super().__init__(initial_lr)\n",
+    "        self.gamma = gamma\n",
+    "        \n",
+    "    def get_lr(self) -> float:\n",
+    "        return self.initial_lr * (self.gamma ** self.current_step)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ca70c15a",
    "metadata": {},
    "outputs": [],
@@ -776,7 +834,7 @@
     "        self.optimizer = optimizer\n",
     "        self.visualizer = TrainingVisualizer()\n",
     "\n",
-    "    def train(self, dataset: Dataset, epochs: int = 1000, log_interval:int = 200, show_plots:bool = True, patience: int = 10, min_delta: float = 1e-4):\n",
+    "    def train(self, dataset: Dataset, epochs: int = 1000, log_interval:int = 200, show_plots:bool = True, patience: int = 20, min_delta: float = 1e-4, lr_scheduler: LRScheduler = ExponentialLRScheduler(0.01, gamma=0.99)):\n",
     "        '''\n",
     "        Train the model using the specified loss function and optimizer.\n",
     "        The training loop consists of the following steps:\n",
@@ -797,6 +855,7 @@
     "            show_plots (bool): Whether to show the plots during training. Default is True.\n",
     "            patience (int): Number of epochs to wait for improvement before early stopping. Default is 10.\n",
     "            min_delta (float): Minimum change in the validation loss to qualify as an improvement. Default is 1e-4.\n",
+    "            lr_scheduler (LRScheduler): Learning rate scheduler to adjust the learning rate during training. Default is ExponentialLRScheduler with initial learning rate 0.01.\n",
     "        Returns:\n",
     "            None\n",
     "        '''\n",
@@ -810,6 +869,8 @@
     "        for epoch in range(epochs):\n",
     "            start_time = time.time()\n",
     "            epoch_loss = 0\n",
+    "            optimizer.update_learning_rate(lr_scheduler.get_lr())\n",
+    "            lr_scheduler.step()\n",
     "            for x_batch, y_batch in train_loader:\n",
     "                # Forward pass\n",
     "                y_pred = self.model.forward(x_batch)\n",
@@ -833,9 +894,11 @@
     "            self.visualizer.update(epoch_loss, val_loss, self.compute_accuracy(train_loader), self.compute_accuracy(val_loader))\n",
     "            epoch_times.append(time.time() - start_time)\n",
     "            # Early stopping check\n",
-    "            if val_loss < best_val_loss - min_delta:\n",
+    "            if val_loss < best_val_loss*(1 - min_delta):\n",
     "                best_val_loss = val_loss\n",
-    "                best_model_state = copy.deepcopy([layer.weights for layer in self.model.layers if isinstance(layer, Linear)])\n",
+    "                best_model_state = copy.deepcopy([(layer.weights.copy(), layer.bias.copy()) \n",
+    "                        for layer in self.model.layers \n",
+    "                        if isinstance(layer, Linear)])\n",
     "                patience_counter = 0\n",
     "            else:\n",
     "                patience_counter += 1\n",
@@ -844,8 +907,9 @@
     "                print(f\"Early stopping triggered after {epoch} epochs\")\n",
     "                # Restore best model\n",
     "                linear_layers = [l for l in self.model.layers if isinstance(l, Linear)]\n",
-    "                for layer, weights in zip(linear_layers, best_model_state):\n",
-    "                    layer.weights = copy.deepcopy(weights)\n",
+    "                for layer, (weights, bias) in zip(linear_layers, best_model_state):\n",
+    "                    layer.weights = weights.copy()\n",
+    "                    layer.bias = bias.copy()\n",
     "                break\n",
     "            # Print loss every 100 epochs\n",
     "            if epoch % log_interval == 0:\n",
@@ -945,7 +1009,7 @@
     "loss_fn = CrossEntropySoftMax()\n",
     "optimizer = SGD(learning_rate=0.01)\n",
     "trainer = Trainer(model, loss_fn, optimizer)\n",
-    "trainer.train(dataset, epochs=1000)\n",
+    "trainer.train(dataset, epochs=1000, patience=60)\n",
     "# Test the model\n",
     "y_pred = model.forward(x_test)\n",
     "predicted_labels = np.argmax(y_pred, axis=1)\n",
