--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -27,7 +27,7 @@
     "### Data and Training\n",
     "- (DONE) ~~Early stopping mechanism to prevent overfitting~~    (4)\n",
     "- Implement k-fold cross-validation                  (6)\n",
-    "- Learning rate scheduling                           (5)\n",
+    "- (DONE) ~~Learning rate scheduling~~                           (5)\n",
     "- Training on other toy datasets (e.g., digit recognition or synthetic classification)                                      (11)\n",
     "\n",
     "### Visualization and Interactivity\n",
