add comment clarifying the initial barbone training loop

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -443,7 +443,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put everything together in a training loop\n",
+    "# Put everything together in a very simplistic training loop \n",
+    "# Note: better training infrastructure can be found in this notebook further on\n",
     "def train(model: Sequential, loss_fn: Loss, optimizer: Optimizer, x_train: np.ndarray, y_train: np.ndarray, batch_size: int = 32, epochs: int = 1000):\n",
     "    '''\n",
     "    Train the model using the specified loss function and optimizer. No cross-validation is performed.\n",
