Implement k-fold cross-validation with visualization
- Add CrossValidator class with k-fold strategy
- Add KFoldVisualizer for tracking metrics across folds
- Extend Trainer with train_with_cv method
- Improve learning rate scheduling
- Fix model state preservation between folds
- Add visualization of cross-validation results

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -445,6 +445,7 @@
    "source": [
     "# Put everything together in a very simplistic training loop \n",
     "# Note: better training infrastructure can be found in this notebook further on\n",
+    "\n",
     "def train(model: Sequential, loss_fn: Loss, optimizer: Optimizer, x_train: np.ndarray, y_train: np.ndarray, batch_size: int = 32, epochs: int = 1000):\n",
     "    '''\n",
     "    Train the model using the specified loss function and optimizer. No cross-validation is performed.\n",
@@ -496,16 +497,8 @@
     "        # Print loss every 100 epochs\n",
     "        if epoch % 100 == 0:\n",
     "            print(f\"Epoch {epoch}, Loss: {epoch_loss}\")\n",
-    "            \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba90a693",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            \n",
+    "\n",
     "#Define a simple model and apply it to spiral dataset\n",
     "model = Sequential([\n",
     "    Linear(2, 64),\n",
@@ -816,7 +809,88 @@
     "    \n",
     "        plt.suptitle('Weight Values and Their Updates', y=1.05, fontsize=14)\n",
     "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "        \n",
+    "\n",
+    "class KFoldVisualizer(TrainingVisualizer):\n",
+    "    \"\"\"Extended visualizer for k-fold cross validation\"\"\"\n",
+    "    def __init__(self, k_folds: int):\n",
+    "        super().__init__()\n",
+    "        self.k_folds = k_folds\n",
+    "        self.fold_histories = []\n",
+    "        \n",
+    "    def add_fold_history(self, fold_history: dict):\n",
+    "        \"\"\"Store history for one fold\"\"\"\n",
+    "        self.fold_histories.append(fold_history)\n",
+    "    \n",
+    "    def plot_k_fold_results(self):\n",
+    "        \"\"\"Plot aggregated results across folds\"\"\"\n",
+    "        fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 5))\n",
+    "        \n",
+    "        # Plot individual fold histories\n",
+    "        for i, hist in enumerate(self.fold_histories):\n",
+    "            ax1.plot(hist['val_loss'], alpha=0.3, label=f'Fold {i+1}')\n",
+    "            ax2.plot(hist['val_acc'], alpha=0.3)\n",
+    "        \n",
+    "        # Plot mean ± std\n",
+    "        val_losses = np.array([h['val_loss'] for h in self.fold_histories])\n",
+    "        val_accs = np.array([h['val_acc'] for h in self.fold_histories])\n",
+    "        \n",
+    "        epochs = range(len(val_losses[0]))\n",
+    "        mean_loss = np.mean(val_losses, axis=0)\n",
+    "        std_loss = np.std(val_losses, axis=0)\n",
+    "        mean_acc = np.mean(val_accs, axis=0)\n",
+    "        std_acc = np.std(val_accs, axis=0)\n",
+    "        \n",
+    "        ax1.plot(epochs, mean_loss, 'r-', label='Mean Loss', linewidth=2)\n",
+    "        ax1.fill_between(epochs, mean_loss-std_loss, mean_loss+std_loss, alpha=0.2)\n",
+    "        ax1.set_title(f'Validation Loss Across {self.k_folds} Folds')\n",
+    "        ax1.set_xlabel('Epochs')\n",
+    "        ax1.set_ylabel('Loss')\n",
+    "        ax1.legend()\n",
+    "        \n",
+    "        ax2.plot(epochs, mean_acc, 'r-', label='Mean Accuracy', linewidth=2)\n",
+    "        ax2.fill_between(epochs, mean_acc-std_acc, mean_acc+std_acc, alpha=0.2)\n",
+    "        ax2.set_title(f'Validation Accuracy Across {self.k_folds} Folds')\n",
+    "        ax2.set_xlabel('Epochs')\n",
+    "        ax2.set_ylabel('Accuracy (%)')\n",
+    "        ax2.legend()\n",
+    "        \n",
+    "        plt.tight_layout()\n",
     "        plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44698a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CrossValidator class to perform k-fold cross-validation and other validation strategies\n",
+    "#To be implemented\n",
+    "\n",
+    "class CrossValidator:\n",
+    "    def __init__(self, validation_strategy: str = \"k-fold\", **kwargs):\n",
+    "        assert validation_strategy in [\"k-fold\", \"leave-one-out\", \"stratified\"],\\\n",
+    "            \"Validation strategy must be one of: 'k-fold', 'leave-one-out', 'stratified'\"\n",
+    "        self.validation_strategy = validation_strategy\n",
+    "        self.kwargs = kwargs  # Store parameters like k, etc.\n",
+    "\n",
+    "    def get_folds(self, dataset: Dataset) -> list[tuple[np.ndarray, np.ndarray]]:\n",
+    "        \"\"\"Returns list of (train_indices, val_indices) for the chosen strategy\"\"\"\n",
+    "        if self.validation_strategy == \"k-fold\":\n",
+    "            k = self.kwargs.get('k', 5)\n",
+    "            indices = np.arange(len(dataset))\n",
+    "            np.random.shuffle(indices)\n",
+    "            fold_size = len(dataset) // k\n",
+    "            folds = []\n",
+    "            for i in range(k):\n",
+    "                val_idx = indices[i*fold_size:(i+1)*fold_size]\n",
+    "                train_idx = np.concatenate([indices[:i*fold_size], \n",
+    "                                          indices[(i+1)*fold_size:]])\n",
+    "                folds.append((train_idx, val_idx))\n",
+    "            return folds"
    ]
   },
   {
@@ -835,7 +909,7 @@
     "        self.optimizer = optimizer\n",
     "        self.visualizer = TrainingVisualizer()\n",
     "\n",
-    "    def train(self, dataset: Dataset, epochs: int = 1000, log_interval:int = 200, show_plots:bool = True, patience: int = 20, min_delta: float = 1e-4, lr_scheduler: LRScheduler = ExponentialLRScheduler(0.01, gamma=0.99)):\n",
+    "    def train(self, train_loader: DataLoader, val_loader: DataLoader, epochs: int = 1000, log_interval:int = 200, show_plots:bool = True, patience: int = 20, min_delta: float = 1e-4, lr_scheduler: LRScheduler = ExponentialLRScheduler(0.01, gamma=0.99)) -> dict:\n",
     "        '''\n",
     "        Train the model using the specified loss function and optimizer.\n",
     "        The training loop consists of the following steps:\n",
@@ -861,7 +935,7 @@
     "            None\n",
     "        '''\n",
     "        # Split the dataset into training and validation sets\n",
-    "        train_loader, val_loader = DataLoader.holdout_split(dataset,test_size=0.2)\n",
+    "       # train_loader, val_loader = DataLoader.holdout_split(dataset,test_size=0.2)\n",
     "        epoch_times = []\n",
     "        best_val_loss = float('inf')\n",
     "        best_model_state = None\n",
@@ -925,6 +999,7 @@
     "        \n",
     "        # Plot the metrics history during training\n",
     "        self.visualizer.plot_metrics_history()\n",
+    "        return self.visualizer.history\n",
     "                \n",
     "    def validate(self, val_loader: DataLoader) -> float:\n",
     "        '''\n",
@@ -962,29 +1037,48 @@
     "            pred = self.model.forward(x_batch)\n",
     "            correct += np.sum(np.argmax(pred, axis=1) == np.argmax(y_batch, axis=1))\n",
     "            total += len(y_batch)\n",
-    "        return 100 * correct / total"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44698a6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# CrossValidator class to perform k-fold cross-validation and other validation strategies\n",
-    "#To be implemented\n",
-    "\n",
-    "class CrossValidator:\n",
-    "    def __init__(self, model: Sequential, loss_fn: Loss, optimizer: Optimizer, validation_strategy : str = \"holdout\"):\n",
-    "        assert validation_strategy in [\"holdout\", \"k-fold\"], \"Validation strategy must be either 'holdout' or 'k-fold'.\"\n",
-    "        self.validation_strategy = validation_strategy\n",
-    "        self.model = model\n",
-    "        self.loss_fn = loss_fn\n",
-    "        self.optimizer \n",
-    "\n",
-    "    def cross_validate(self, dataset: Dataset, epochs: int = 1000):\n",
-    "        pass"
+    "        return 100 * correct / total\n",
+    "    \n",
+    "    def train_with_cv(self, dataset: Dataset, cv: CrossValidator, **kwargs):\n",
+    "        \"\"\"Train with cross-validation and return the best model\"\"\"\n",
+    "        cv_visualizer = KFoldVisualizer(len(cv.get_folds(dataset)))\n",
+    "        fold_scores = []\n",
+    "        best_model = None\n",
+    "        best_score = float('inf')\n",
+    "    \n",
+    "        for fold_idx, (train_idx, val_idx) in enumerate(cv.get_folds(dataset)):\n",
+    "            print(f\"\\nTraining Fold {fold_idx + 1}\")\n",
+    "        \n",
+    "            # Create fresh model for each fold\n",
+    "            self.model = copy.deepcopy(self.model)\n",
+    "        \n",
+    "            # Train this fold\n",
+    "            kwargs['show_plots'] = False  # Disable per-fold plots\n",
+    "            train_loader = DataLoader(dataset, indices=train_idx)\n",
+    "            val_loader = DataLoader(dataset, indices=val_idx)\n",
+    "        \n",
+    "            # Regular training but store history\n",
+    "            history = self.train(train_loader, val_loader, **kwargs)\n",
+    "            cv_visualizer.add_fold_history(history)\n",
+    "        \n",
+    "            # Compute fold score\n",
+    "            fold_score = self.validate(val_loader)\n",
+    "            fold_scores.append(fold_score)\n",
+    "        \n",
+    "            # Keep track of best model\n",
+    "            if fold_score < best_score:\n",
+    "                best_score = fold_score\n",
+    "                best_model = copy.deepcopy(self.model)\n",
+    "    \n",
+    "        # Restore best model\n",
+    "        self.model = best_model\n",
+    "    \n",
+    "        # Show aggregated results\n",
+    "        cv_visualizer.plot_k_fold_results()\n",
+    "    \n",
+    "        mean_score = np.mean(fold_scores)\n",
+    "        std_score = np.std(fold_scores)\n",
+    "        print(f\"\\nCross-validation score: {mean_score:.4f} ± {std_score:.4f}\")"
    ]
   },
   {
@@ -994,29 +1088,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#putting everything together\n",
-    "x_train, y_train = generate_spiral_data(1000, 3)\n",
-    "x_test, y_test = generate_spiral_data(200, 3)\n",
-    "dataset = Dataset(x_train, y_train)\n",
+    "# put everything together and train the model on spiral dataset with cross-validation\n",
+    "train_dataset = Dataset(x_train, y_train)\n",
+    "test_dataset = Dataset(x_test, y_test)\n",
     "\n",
     "model = Sequential([\n",
-    "    Linear(2, 12),\n",
+    "    Linear(2, 16),\n",
     "    ReLU(),\n",
-    "    Linear(12, 50),\n",
+    "    Linear(16, 16),\n",
     "    ReLU(),\n",
-    "    Linear(50, 3),\n",
+    "    Linear(16, 3),\n",
     "])\n",
-    "model.summary()\n",
+    "\n",
     "loss_fn = CrossEntropySoftMax()\n",
-    "optimizer = SGD(learning_rate=0.01)\n",
+    "optimizer = SGD(learning_rate=0.1)\n",
     "trainer = Trainer(model, loss_fn, optimizer)\n",
-    "trainer.train(dataset, epochs=1000, patience=60)\n",
-    "# Test the model\n",
-    "y_pred = model.forward(x_test)\n",
-    "predicted_labels = np.argmax(y_pred, axis=1)\n",
-    "true_labels = np.argmax(y_test, axis=1)\n",
-    "accuracy = np.mean(predicted_labels == true_labels)\n",
-    "print(f\"Test Accuracy: {accuracy * 100:.2f}%\")"
+    "\n",
+    "# Train with CV\n",
+    "trainer.train_with_cv(train_dataset, \n",
+    "                     cv=CrossValidator(\"k-fold\", k=5), \n",
+    "                     epochs=1000, \n",
+    "                     patience=100,\n",
+    "                     log_interval=100,\n",
+    "                     lr_scheduler=ExponentialLRScheduler(0.1, gamma=0.999))\n",
+    "\n",
+    "# Create test loader and evaluate\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True)\n",
+    "test_acc = trainer.compute_accuracy(test_loader)\n",
+    "print(f\"\\nFinal Test Accuracy: {test_acc:.2f}%\")"
    ]
   }
  ],
